@@ -1,1 +1,16 @@
 # Calculator
+This JavaFX application implements a simple calculator with basic arithmetic operations including addition, subtraction, multiplication, division, and modulo. The GUI consists of digit buttons (0–9), arithmetic operation buttons (+, -, *, /, %), and functional buttons such as = and AC. The calculator also supports decimal inputs through the . button. 
+
+To run the application, ensure you have the following:
+>Java Development Kit (JDK) (version 8 or higher)
+>JavaFX SDK (if not bundled with the JDK)
+>A development environment such as Eclipse or IntelliJ IDEA
+
+Ensure JavaFX SDK is configured properly:
+Add the --module-path and --add-modules arguments to your JavaFX runtime configuration. 
+Click on the project's buildpath and add javafx to the user's library under classpath. 
+
+Potential improvements; 
+>Support for More than Two Operands
+> Complex Calculations: Introduce support for matrix operations such as matrix addition, multiplication, and inversion and design the interface to accept matrix input (e.g., using a grid or table structure).
+
